url encode is wrong